# github_stats_to_postgres

./: pyproject.toml  repos_stats.json
src/: database.ini  functions.py  main.py  repos_stats.json
